--- a/roles/zookeper/templates/zookeper.service.j2
+++ b/roles/zookeper/templates/zookeper.service.j2
@@ -5,7 +5,7 @@ After=network.target
 
 [Service]
 Type=simple
-User=kafka
+User=ivan
 ExecStart=/home/ivan/kafka_2.12-3.4.0/bin/zookeeper-server-start.sh /home/ivan/kafka_2.12-3.4.0/config/zookeeper.properties        
 ExecStop=/home/ivan/kafka_2.12-3.4.0/bin/zookeeper-server-stop.sh
 Restart=on-abnormal
