--- a/roles/zookeper/templates/zookeper.service.j2
+++ b/roles/zookeper/templates/zookeper.service.j2
@@ -5,7 +5,8 @@ After=network.target
 
 [Service]
 Type=simple
-User={{ ssh_user }}
+ProtectHome=off
+User={{ kafka_user }}
 ExecStart={{ kafka_unzip_path }}/kafka_2.12-3.4.0/bin/zookeeper-server-start.sh {{ kafka_unzip_path }}/kafka_2.12-3.4.0/config/zookeeper.properties
 ExecStop={{ kafka_unzip_path }}/kafka_2.12-3.4.0/bin/zookeeper-server-stop.sh
 Restart=on-abnormal
