--- a/roles/zookeper/templates/zookeper.properties.j2
+++ b/roles/zookeper/templates/zookeper.properties.j2
@@ -4,7 +4,9 @@ clientPort=2181
 initLimit=5
 syncLimit=2
 { % for zoo_node in groups['zookeper'] % }
-server.{{ loop.index }}={{ zoo_node }}:2888:3888
+{% set l = loop %}
+{{l}}
+# server.{{ loop.index }}={{ zoo_node }}:2888:3888
 { % endfor % }
 autopurge.snapRetainCount=3
 autopurge.purgeInterval=24
