--- a/roles/zookeper/templates/zookeper.properties.j2
+++ b/roles/zookeper/templates/zookeper.properties.j2
@@ -6,7 +6,7 @@ syncLimit=2
 { % for zoo_node in groups['zookeper'] % }
 {% set l = loop %}
 {{l}}
-# server.{{ loop.index }}={{ zoo_node }}:2888:3888
+server.{{ l.index }}={{ zoo_node }}:2888:3888
 { % endfor % }
 autopurge.snapRetainCount=3
 autopurge.purgeInterval=24
