--- a/roles/zookeeper/templates/zookeper.properties.j2
+++ b/roles/zookeeper/templates/zookeper.properties.j2
@@ -3,7 +3,7 @@ dataDir=/var/lib/zookeeper/
 clientPort=2181
 initLimit=5
 syncLimit=2
-{% for zoo_node in groups['zookeper'] %}
+{% for zoo_node in groups['zookeeper'] %}
     server.{{ loop.index }}={{ zoo_node }}:2888:3888
 {% endfor %}
 autopurge.snapRetainCount=3
