--- a/roles/zookeeper/templates/zookeeper.properties.j2
+++ b/roles/zookeeper/templates/zookeeper.properties.j2
@@ -4,7 +4,7 @@ clientPort=2181
 initLimit=5
 syncLimit=2
 {% for zoo_node in groups['zookeeper'] %}
-    server.{{ loop.index }}={{ hostvars[zoo_node]['ansible_ssh_host'] }}:2888:3888
+    server.{{ loop.index }}={{ hostvars[zoo_node]['ansible_host'] }}:2888:3888
 {% endfor %}
 autopurge.snapRetainCount=3
 autopurge.purgeInterval=24
