--- a/roles/kafka_broker_raft/templates/server.properties.j2
+++ b/roles/kafka_broker_raft/templates/server.properties.j2
@@ -1,5 +1,5 @@
 process.roles=broker
-node.id={{ groups['kafka_controllers_raft'] | length + groups['kafka_brokers_raft'].index0(inventory_hostname) }}
+node.id={{ groups['kafka_controllers_raft'] | length + groups['kafka_brokers_raft'].index(inventory_hostname) - 1 }}
 controller.quorum.voters={% for controller_node in groups['kafka_controllers_raft'] %}{{ loop.index }}@{{ hostvars[controller_node]['ansible_host'] }}:9093{% if not loop.last %},{% endif %}{% endfor %}
 
 listeners=PLAINTEXT://{{ hostvars[inventory_hostname]['ansible_host'] }}:9093
