Add cred vars & client template

--- a/roles/kafka_controller_raft/templates/server.properties.j2
+++ b/roles/kafka_controller_raft/templates/server.properties.j2
@@ -10,14 +10,14 @@ sasl.mechanism.controller.protocol=PLAIN
 sasl.mechanism.inter.broker.protocol=PLAIN
 
 listener.name.broker.plain.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \
-    username="admin" \
-    password="admin" \
-    user_admin="admin";
+    username={{ sasl_plain_broker_username }} \
+    password={{ sasl_plain_broker_password }} \
+    user_admin={{ sasl_plain_broker_admin_username }};
 
 listener.name.controller.plain.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \
-    username="admin" \
-    password="admin" \
-    user_admin="admin";
-
+    username={{ sasl_plain_controller_username }} \
+    password={{ sasl_plain_controller_password }} \
+    user_admin={{ sasl_plain_controller_admin_username }};
+    
 listener.security.protocol.map=CONTROLLER:PLAINTEXT,BROKER:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
 log.dirs={{ kraft_logs_dir }}
