--- a/roles/kafka_broker_raft/templates/server.properties.j2
+++ b/roles/kafka_broker_raft/templates/server.properties.j2
@@ -9,7 +9,7 @@ controller.listener.names=CONTROLLER
 
 sasl.enabled.mechanisms=PLAIN
 sasl.mechanism.controller.protocol=SASL_PLAINTEXT
-sasl.mechanism.inter.broker.protocol=SASL_PLAINTEXT
+sasl.mechanism.inter.broker.protocol=PLAIN
 
 listener.name.broker.plain.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \
     username={{ sasl_plain_broker_username }} \
