--- a/roles/kafka_controller_raft/templates/server.properties.j2
+++ b/roles/kafka_controller_raft/templates/server.properties.j2
@@ -6,7 +6,7 @@ listeners=CONTROLLER://{{ hostvars[inventory_hostname]['ansible_host'] }}:9093
 controller.listener.names=CONTROLLER
 
 sasl.enabled.mechanisms=PLAIN
-sasl.mechanism.controller.protocol=SASL_PLAINTEXT
+sasl.mechanism.controller.protocol=PLAIN
 sasl.mechanism.inter.broker.protocol=PLAIN
 
 listener.name.broker.plain.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \
