--- a/roles/kafka/templates/client-sasl.properties.j2
+++ b/roles/kafka/templates/client-sasl.properties.j2
@@ -1,3 +1,4 @@
+security.protocol=SASL_PLAINTEXT
 sasl.mechanism=PLAIN
 sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \
 username={{ sasl_plain_broker_username }} \
