--- a/roles/kafka/templates/user1-sasl.properties.j2
+++ b/roles/kafka/templates/user1-sasl.properties.j2
@@ -1,5 +1,5 @@
 security.protocol=SASL_PLAINTEXT
 sasl.mechanism=PLAIN
 sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \
-username={{ sasl_plain_broker_username }} \
-password={{ sasl_plain_broker_password }};
+username=user1 \
+password={{ sasl_plain_user1_password }};
