--- a/roles/kafka_broker_raft/templates/server.properties.j2
+++ b/roles/kafka_broker_raft/templates/server.properties.j2
@@ -14,12 +14,16 @@ sasl.mechanism.inter.broker.protocol=PLAIN
 listener.name.broker.plain.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \
     username={{ sasl_plain_broker_username }} \
     password={{ sasl_plain_broker_password }} \
-    user_admin={{ sasl_plain_broker_admin_username }};
+    user1={{ sasl_plain_user1_password }} \
+    user2={{ sasl_plain_user2_password }} \
+    user3={{ sasl_plain_user3_password }};
 
 listener.name.controller.plain.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \
     username={{ sasl_plain_controller_username }} \
     password={{ sasl_plain_controller_password }} \
-    user_admin={{ sasl_plain_controller_admin_username }};
+    user1={{ sasl_plain_user1_password }} \
+    user2={{ sasl_plain_user2_password }} \
+    user3={{ sasl_plain_user3_password }};
 
 listener.security.protocol.map=CONTROLLER:SASL_PLAINTEXT,BROKER:SASL_PLAINTEXT
 log.dirs={{ kraft_logs_dir }}
@@ -27,4 +31,4 @@ log.dirs={{ kraft_logs_dir }}
 # ACL
 authorizer.class.name=org.apache.kafka.metadata.authorizer.StandardAuthorizer
 allow.everyone.if.no.acl.found=true
-super.users=User:{{ sasl_plain_broker_username }}
+super.users=User:{{ sasl_plain_broker_username }},User:{{ sasl_plain_controller_username }}
