--- a/roles/kafka_broker_raft/templates/kafka-broker-raft.service.j2
+++ b/roles/kafka_broker_raft/templates/kafka-broker-raft.service.j2
@@ -6,7 +6,7 @@ After=network.target
 [Service]
 Type=simple
 ProtectHome=off
-Environment="KAFKA_OPTS=-Djava.security.auth.login.config={{ kafka_unzip_path }}/kafka_2.12-3.8.0/config/kraft/jaas.conf\"
+Environment="KAFKA_OPTS=-Djava.security.auth.login.config={{ kafka_unzip_path }}/kafka_2.12-3.8.0/config/kraft/jaas.conf"
 ExecStart={{ kafka_unzip_path }}/kafka_2.12-3.8.0/bin/kafka-server-start.sh {{ kafka_unzip_path }}/kafka_2.12-3.8.0/config/kraft/server.properties
 ExecStop={{ kafka_unzip_path }}/kafka_2.12-3.8.0/bin/kafka-server-stop.sh
 Restart=on-abnormal
