--- a/roles/kafka/templates/user1-sasl.properties.j2
+++ b/roles/kafka/templates/user1-sasl.properties.j2
@@ -1,5 +1,3 @@
 security.protocol=SASL_PLAINTEXT
 sasl.mechanism=PLAIN
-sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \
-username=user1 \
-password={{ sasl_plain_user1_password }};
+sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="user1" password="{{ sasl_plain_user1_password }}";
