--- a/roles/kafka_controller_raft/templates/kafka-controller-raft.service.j2
+++ b/roles/kafka_controller_raft/templates/kafka-controller-raft.service.j2
@@ -6,8 +6,7 @@ After=network.target
 [Service]
 Type=simple
 ProtectHome=off
-Environment='KAFKA_OPTS="-Djava.security.auth.login.config={{ kafka_unzip_path }}/kafka_2.12-3.8.0/config/kraft/jaas.conf"'
-ExecStart={{ kafka_unzip_path }}/kafka_2.12-3.8.0/bin/kafka-server-start.sh {{ kafka_unzip_path }}/kafka_2.12-3.8.0/config/kraft/server.properties
+ExecStart=KAFKA_OPTS="-Djava.security.auth.login.config={{ kafka_unzip_path }}/kafka_2.12-3.8.0/config/kraft/jaas.conf" {{ kafka_unzip_path }}/kafka_2.12-3.8.0/bin/kafka-server-start.sh {{ kafka_unzip_path }}/kafka_2.12-3.8.0/config/kraft/server.properties
 ExecStop={{ kafka_unzip_path }}/kafka_2.12-3.8.0/bin/kafka-server-stop.sh
 Restart=on-abnormal
 
